# buaa-checkin

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gen_secret.sh
.github/workflows/: release.yml
src/: api.rs  client.rs  error.rs  main.rs  store.rs  webhook.rs  windows.rs
src/pipeline/: mod.rs  poller.rs  scheduler.rs  worker.rs
static/: app.js  index.html  style.css
