[package]
name = "buaa-checkin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "buaa-checkin"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
rand = "0.9"
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jsonwebtoken = "9"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower = "0.5"
